clusters/home/default/jellyfin/99-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin-deployment
  namespace: default
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          # Render group
          - 105
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - optiplex
      containers:
      - name: jellyfin
        image:  docker.io/jellyfin/jellyfin:10.9.8
        securityContext:
          privileged: true
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-media
          mountPath: /media
        - name: "render-device"
          mountPath: "/dev/dri/renderD128"
        livenessProbe:
          httpGet:
            path: /
            port: 8096
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            cpu: "1000m"
            memory: "500Mi"
      volumes:
      - name: jellyfin-config
        hostPath:
          path: /mnt/shared_data/k8s/jellyfin/config
      - name: jellyfin-media
        hostPath:
          path: /mnt/shared_data/k8s/jellyfin/media
      - name: render-device
        hostPath:
          path: /dev/dri/renderD128
