clusters/home/default/jellyfin/80-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: default
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: panel
      protocol: TCP
      port: 80
      targetPort: 8096
  type: ClusterIP
