clusters/home/default/jellyfin/99-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin-deployment
  namespace: default
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image:  docker.io/jellyfin/jellyfin:10.8.13
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-media
          mountPath: /media
        livenessProbe:
          httpGet:
            path: /
            port: 8096
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"

      nodeSelector:
        disk: ssd
      volumes:
      - name: jellyfin-config
        hostPath:
          path: /mnt/shared_data/k8s/jellyfin/config
      - name: jellyfin-media
        hostPath:
          path: /mnt/shared_data/k8s/jellyfin/media

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: default
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: panel
      protocol: TCP
      port: 80
      targetPort: 8096
  type: NodePort
  externalTrafficPolicy: Local
