clusters/home/default/jellyfin/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jellyfin-ingress
    namespace: default
    annotations:
      # Inject jellyscrub
      #nginx.ingress.kubernetes.io/configuration-snippet: |
      #    proxy_set_header Accept-Encoding "";
      #    sub_filter
      #    '</body>'
      #    '<script plugin="Jellyscrub" version="1.0.0.0" src="/Trickplay/ClientScript"></script>
      #    </body>';
      #    sub_filter_once on;
      cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
    ingressClassName: nginx
    rules:
        - host: jellyfin.kokev.de
          http:
            paths:
                - pathType: Prefix
                  backend:
                    service:
                        name: jellyfin-service
                        port:
                            number: 80
                  path: /
    tls:
        - hosts:
            - jellyfin.kokev.de
          secretName: jellyfin-tls
